gccida/g0/emit_case_nodes
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_case_nodes/src/stmt.c:6507:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v46; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_case_nodes/src/stmt.c:6508:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v47; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_case_nodes/src/stmt.c:6510:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *test_label; // [rsp+28h] [rbp-68h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_case_nodes/src/stmt.c:6515:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *low; // [rsp+50h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_case_nodes/src/stmt.c:6516:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type; // [rsp+58h] [rbp-38h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_case_nodes/src/stmt.c:6520:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+70h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_case_nodes/src/stmt.c:6522:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *test_label_0; // [rsp+78h] [rbp-18h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_case_nodes/src/stmt.c:6544:30: error: use of undeclared identifier 'machine_mode'
v28 = convert_modes( mode, ( machine_mode)imode, v27, unsignedp); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_case_nodes/src/stmt.c:6548:30: error: use of undeclared identifier 'machine_mode'
v31 = convert_modes( mode, ( machine_mode)imode, v30, unsignedp); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_case_nodes/src/stmt.c:6564:30: error: use of undeclared identifier 'machine_mode'
v33 = convert_modes( mode, ( machine_mode)imode, v32, unsignedp); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_case_nodes/src/stmt.c:6569:30: error: use of undeclared identifier 'machine_mode'
v36 = convert_modes( mode, ( machine_mode)imode, v35, unsignedp); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_case_nodes/src/stmt.c:6579:30: error: use of undeclared identifier 'machine_mode'
v38 = convert_modes( mode, ( machine_mode)imode, v37, unsignedp); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_case_nodes/src/stmt.c:6584:30: error: use of undeclared identifier 'machine_mode'
v41 = convert_modes( mode, ( machine_mode)imode, v40, unsignedp); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_case_nodes/src/stmt.c:6611:30: error: use of undeclared identifier 'machine_mode'
v45 = convert_modes( mode, ( machine_mode)imode, v44, unsignedp); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_case_nodes/src/stmt.c:6618:30: error: use of undeclared identifier 'machine_mode'
v43 = convert_modes( mode, ( machine_mode)imode, v42, unsignedp); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_case_nodes/src/stmt.c:6628:29: error: use of undeclared identifier 'machine_mode'
v6 = convert_modes( mode, ( machine_mode)imode, v5, unsignedp); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_case_nodes/src/stmt.c:6636:29: error: use of undeclared identifier 'machine_mode'
v9 = convert_modes( mode, ( machine_mode)imode, v8, unsignedp); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_case_nodes/src/stmt.c:6645:30: error: use of undeclared identifier 'machine_mode'
v12 = convert_modes( mode, ( machine_mode)imode, v11, unsignedp); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_case_nodes/src/stmt.c:6653:30: error: use of undeclared identifier 'machine_mode'
v15 = convert_modes( mode, ( machine_mode)imode, v14, unsignedp); 
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/emit_case_nodes/src/obj/stmt.o] Error 1
